# syllable-stress.el

./: .gitignore  Makefile  README.org  README.zh-CN.org  main.py  pyproject.toml  syllable-stress.el  syllable-stress.py
tests/: tests.el
